@@ -1,5 +1,8 @@
 2000-08-22  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/Transaction.c (xaccSplitSetBaseValue): check to
+	make sure the security is not "" before allowing price changes.
+
 	* src/gnome/window-register.c (gnc_register_check_close): use
 	xaccSRCancelCursorTransChanges to cancel any pending changes.
 
